syntax = "proto2";

// CommandProfilePlayerNotFound
message ProfileNotFound {
	// No fields required
}

// CommandProfilePacketRes
message ProfileRes {
	message Stats {
		message Energy {
			required int32 value = 1;
			required int32 max = 2;
		}
		required Energy energy = 1;
		required int32 attack = 2;
		required int32 defense = 3;
		required int32 speed = 4;
		message Breath {
			required int32 base = 1;
			required int32 max = 2;
			required int32 regen = 3;
		}
		required Breath breath = 5;
	}

	message Missions {
		required int32 gems = 1;
		required int32 campaign_progression = 2;
	}

	message Rank {
		required bool unranked = 1;
		required int32 rank = 2;
		required int32 number_of_players = 3;
		required int32 score = 4;
	}

	message Effect {
		required bool healed = 1;
		required int32 time_left = 2;
		required string effect = 3;
		required bool has_time_display = 4;
	}

	message Pet {
		required int32 type_id = 1;
		required string sex = 2;
		required int32 rarity = 3;
		required string nickname = 4;
	}

	message FightRanking {
		required int32 glory = 1;
		required int32 league = 2;
	}

	message Health {
		required int32 value = 1;
		required int32 max = 2;
	}

	message Experience {
		required int32 value = 1;
		required int32 max = 2;
	}

	repeated string badges = 1;
	optional Stats stats = 2;
	required Missions missions = 3;
	required Rank rank = 4;
	required Effect effect = 5;
	optional int32 class_id = 6;
	optional FightRanking fight_ranking = 7;
	optional string guild = 8;
	optional int32 destination_id = 9;
	optional string map_type_id = 10;
	optional Pet pet = 11;
	required string color = 12;
	required int32 level = 13;
	required Health health = 14;
	required Experience experience = 15;
	required int32 money = 16;

	required string pseudo = 17;
}